--- a/main-scss.scss
+++ b/main-scss.scss
@@ -7,7 +7,7 @@
 @use "./styles/section__localize";
 @use "./styles/section__boost";
 @use "./styles/section__revolut";
-
+@use "./styles/section__software";
 
 @font-face {
   font-family: 'Graphik LCG';
