Add buttons, make new corner on a product.

--- a/main-scss.scss
+++ b/main-scss.scss
@@ -8,6 +8,8 @@
 @use "./styles/section__boost";
 @use "./styles/section__revolut";
 @use "./styles/section__software";
+@use "./styles/section__integrate";
+@use "./styles/section__easy";
 
 @font-face {
   font-family: 'Graphik LCG';
