--- a/main-scss.css
+++ b/main-scss.css
@@ -318,9 +318,8 @@
   padding: 80px 138px 84px 54px;
   background: #DABC98;
 }
-.section__software__software {
-  display: flex;
-  flex-direction: row;
+.section__software__wrapper {
+  display: inline-flex;
   align-items: center;
 }
 
@@ -329,18 +328,97 @@
   font-weight: 600;
   font-size: 35px;
   line-height: 50px;
+  margin-right: 124px;
 }
 
 .software__cake {
   max-width: 176px;
+  margin-right: 67px;
+}
+
+.software__line {
+  width: 1px;
+  height: 168px;
+  background: #000;
+  margin-right: 71px;
 }
 
 .software__users {
   max-width: 128px;
+  margin-right: 70px;
 }
 
 .software__highest {
   max-width: 150px;
+}
+
+.section__integrate {
+  padding: 165px 209px 162px 208px;
+}
+.section__integrate__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section__integrate__wrapper {
+  text-align: center;
+}
+
+.integrate__text {
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 30px;
+  text-align: center;
+  max-width: 539px;
+  margin-bottom: 25px;
+}
+
+.integrate__img {
+  max-width: 1023px;
+  margin-bottom: 32px;
+}
+
+.integrate__button {
+  padding: 0 20px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 60px;
+  color: #FFFFFF;
+  background: #FF6336;
+}
+
+.section__easy {
+  padding: 119px 328px 161px 328px;
+  background: #FF9C7D;
+}
+.section__easy__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section__easy h4 {
+  text-align: center;
+  margin-bottom: 29px;
+}
+
+.easy__text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: center;
+  margin-bottom: 54px;
+}
+
+.easy__button {
+  padding: 0 40px;
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 60px;
+  text-align: center;
+  color: #FFFFFF;
+  background: #000000;
 }
 
 @font-face {
