--- a/main-scss.scss
+++ b/main-scss.scss
@@ -10,6 +10,7 @@
 @use "./styles/section__software";
 @use "./styles/section__integrate";
 @use "./styles/section__easy";
+@use "./styles/section__footer";
 
 @font-face {
   font-family: 'Graphik LCG';
