--- a/styles/_section-main.scss
+++ b/styles/_section-main.scss
@@ -1,3 +1,5 @@
+@use "variables";
+
 .section__main{
   padding: 129px 67px 172px 73px;
   &__wrapper{
@@ -34,8 +36,7 @@
   &__try{
     padding: 0 41px 0 42px;
     color: #FFFFFF;
-    background: #FF6336;
-    border: 1px;
+    background: variables.$button__bg;
   }
   &__book{
     padding: 0 28px;
