--- a/main-scss.css
+++ b/main-scss.css
@@ -64,7 +64,7 @@
   padding: 129px 67px 172px 73px;
 }
 .section__main__wrapper {
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
 }
@@ -122,7 +122,7 @@
   align-items: center;
 }
 .section__localization__labels {
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
   gap: 100px;
   align-items: center;
@@ -145,7 +145,7 @@
   gap: 250px;
 }
 .section__info__wrapper__block {
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
   align-items: center;
   gap: 138px;
@@ -537,7 +537,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  outline: 1px solid red;
 }
 
 body {
